logs/dockerdevice.log
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/dockerdevice'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/cliff'...
Listing './lib/python3.5/site-packages/cliff/formatters'...
Listing './lib/python3.5/site-packages/cliff/tests'...
Listing './lib/python3.5/site-packages/cliff-2.10.0.egg-info'...
Listing './lib/python3.5/site-packages/cmd2-0.7.9.egg-info'...
Listing './lib/python3.5/site-packages/dockerdevice'...
Compiling './lib/python3.5/site-packages/dockerdevice/gpu.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (gpu.py, line 16)
Listing './lib/python3.5/site-packages/dockerdevice-2017.10.25.dev15.egg-info'...
Listing './lib/python3.5/site-packages/nvidia_ml_py-375.53.1.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Compiling './lib/python3.5/site-packages/pynvml.py'...
***   File "./lib/python3.5/site-packages/pynvml.py", line 1831
    print c_count.value
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pyperclip'...
Listing './lib/python3.5/site-packages/pyperclip-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stevedore'...
Listing './lib/python3.5/site-packages/stevedore/example'...
Listing './lib/python3.5/site-packages/stevedore/example2'...
Listing './lib/python3.5/site-packages/stevedore/tests'...
Listing './lib/python3.5/site-packages/stevedore-1.28.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
